# codename_purple_panda

./: .gitignore  README.md  main.py  models.py  package-lock.json  pricing.py  pyproject.toml  schemas.py
tests/: test_discounts.py  test_parcel_cost.py  test_parcel_size.py  test_parcel_weight_penalty.py  test_parcels_pricing.py
