[tool.poetry]
name = "fundapps"
version = "0.1.0"
description = ""
authors = ["Lei Ferretti <elisa.c.ferretti@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.2"
uvicorn = "^0.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
